# ouro

./: Main.hs  README  README.md  TESTS  TODO  discussion.txt  imp.cabal  optimize.sh  test.sh
Imp/: Core.hs  Opt.hs  Parsec.hs  Source.hs
Imp/Core/: Exp.hs  Interpreter.hs  Lexer.hs  Parser.hs  Tokens.hs  Transcriber.hs
Imp/Opt/: CFG.hs  CFGUtils.hs  Exp.hs  Optimiser.hs  Parser.hs
Imp/Source/: Check.hs  Convert.hs  Exp.hs  Interpreter.hs  Lexer.hs  MinParser.hs  Parser.hs  Preprocessor.hs  Tokens.hs
lib/: math.imp  modulo.imp  numbers.imp
test/fails/: extra_args.imp  extra_args.imp.check  extra_args.imp.interpret  fewer_args.imp  fewer_args.imp.int  func_args_num.imp  func_args_num.imp.check  func_args_num.imp.convert  func_dupe_var.imp  func_dupe_var.imp.check  func_redef.imp  func_redef.imp.check  func_undef.imp  func_undef.imp.check  func_undef.imp.interpret  nomain.imp  nomain.imp.check  nomain.imp.int  unreachable.imp  unreachable.imp.check  var_undef.imp  var_undef.imp.check  var_undef.imp.interpret
test/works/: arithmetic.imp  arithmetic.imp.convert  arithmetic.imp.lex  arithmetic.imp.parse  assignments.imp  bubble_sort.imp  bubble_sort5.imp  bubble_sort5.imp.convert  bubble_sort5.imp.lex  bubble_sort5.imp.parse  bubble_sort6.imp  bubble_sort7.imp  factorial.imp  factorial.imp.convert  factorial.imp.core  factorial.imp.lex  factorial.imp.parse  factorial2.imp  factorial_messy.imp  factorial_messy.imp.convert  factorial_messy.imp.lex  factorial_messy.imp.parse  factorial_original.ir  fibonacci.imp  fibonacci.imp.convert  fibonacci.imp.lex  funcop.imp  (+66 more)
(+109 files in other folders)
